<resources>
    <string name="app_name">EasyChat</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="log_in_to_continue">Log in to continue</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="create_new_account">Create new account</string>
    <string name="add_image">Add image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="select_user">Select User</string>
    <string name="type_a_message">Type a message</string>
    <string name="welcome_to_easychat">Welcome to EasyChat</string>
    <string name="don_t_have_an_account_create_a_new_account">Don\'t have an account? Create a new account</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="simple_and_fast_chats_with_easychat">Simple and fast chats with EasyChat</string>
    <string name="get_started">get started</string>
    <string name="online">ONLINE</string>
    <string name="tap_to_chat">TAP TO CHAT</string>
    <string name="your_profile">Your Profile</string>
    <string name="clear_chat">Clear chat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="offline">OFFLINE</string>
</resources>